--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
     "file",
     "sharing"
   ],
-  "repository": "https://github.com/erotixe/FileShareBot2",
+  "repository--> contact ": "https://t.me/Revlotz",
   "logo": "https://ibb.co/FgPVtzw",
   "env": {
     "TG_BOT_TOKEN": {
